[package]
name = "loxmqttrelay"
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "loxmqttrelay"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["auto-initialize","extension-module"] }
pyo3-async-runtimes = { version = "0.25", features = ["attributes", "tokio-runtime"] }
regex = "1.11.1"
lru = "0.16"            # LRU cache
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
log = "0.4"
env_logger = "0.10"     
tokio = { version = "1.47.1", features = ["full"] }