[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"


[project]
name = "loxmqttrelay"
version = "0.1.0"
description = "MQTT Relay for Loxone"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.0",
    "orjson>=3.8.0",
    "streamlit>=1.42.0",
    "pycryptodome>=3.18.0",
    "uvloop>=0.21.0",
    "gmqtt>=0.7.0",
    "construct>=2.10.70",
    "tomlkit>=0.13.0",
    "lxml>=6.0.0",
    "loxwebsocket>=0.5.1"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0"
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pyinstrument>=5.0.0",
    "setuptools>=75.0.0", 
    "setuptools-rust>=1.10.0"
]
build = [
    "setuptools>=75.0.0",
    "setuptools-rust>=1.10.0"
]

[tool.uv]
native-tls = true

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["loxmqttrelay"]

[project.scripts]
loxmqttrelay = "loxmqttrelay.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=. --cov-report=term-missing"
asyncio_mode = "strict"
