[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"


[project]
name = "loxmqttrelay"
version = "0.1.1"
description = "MQTT Relay for Loxone"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "orjson>=3.11.5",
    "streamlit>=1.52.2",
    "pycryptodome>=3.23.0",
    "uvloop>=0.22.1",
    "gmqtt>=0.7.0",
    "construct>=2.10.70",
    "tomlkit>=0.13.3",
    "lxml>=6.0.2",
    "loxwebsocket>=0.5.2",
    "lz4>=4.4.5",
    "pyarrow>=22.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0"
]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pyinstrument>=5.1.2",
    "setuptools>=80.9.0", 
    "setuptools-rust>=1.12.0"
]
build = [
    "setuptools>=80.9.0",
    "setuptools-rust>=1.12.0"
]

[tool.uv]
native-tls = true

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["loxmqttrelay"]

[project.scripts]
loxmqttrelay = "loxmqttrelay.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=. --cov-report=term-missing"
asyncio_mode = "strict"
